--- a/package.json
+++ b/package.json
@@ -4,13 +4,31 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "vue": "^2.6.11"
   },
   "devDependencies": {
+    "@vue/cli-plugin-eslint": "^4.5.19",
     "@vue/cli-service": "~4.5.14",
+    "@vue/eslint-config-airbnb": "^5.0.2",
+    "eslint": "^6.7.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "husky": "^9.0.6",
+    "lint-staged": "^15.2.0",
     "vue-template-compiler": "^2.6.11"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,vue}": "eslint --fix",
+    "*.{vue,css,scss}": "stylelint --fix",
+    "*.{ts,tsx,js,vue,scss,md}": "prettier --write"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
